--- a/MemoryHole/Base.lproj/Main.storyboard
+++ b/MemoryHole/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -78,7 +77,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="That really somethings my something" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dod-08-D87">
-                                <rect key="frame" x="12" y="20" width="351" height="487"/>
+                                <rect key="frame" x="12" y="20" width="351" height="511"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="54"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -99,82 +98,75 @@
                                     <action selector="doneTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="yrl-mo-4Zn"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qxv-z5-Ri3">
-                                <rect key="frame" x="295" y="523" width="64" height="64"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="pEB-p7-EIU">
+                                <rect key="frame" x="16" y="531" width="343" height="64"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1do-C0-iU8">
+                                        <rect key="frame" x="0.0" y="0.5" width="47" height="63"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="42"/>
+                                        <state key="normal" title="💩">
+                                            <color key="titleColor" red="1" green="0.91242306289999997" blue="0.30469108369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="ratingButtonTappedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bd3-2i-Qzy"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vMa-0s-9E1">
+                                        <rect key="frame" x="98.5" y="0.5" width="47" height="63"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="42"/>
+                                        <state key="normal" title="🤔">
+                                            <color key="titleColor" red="1" green="0.91242306289999997" blue="0.30469108369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="ratingButtonTappedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Un4-fR-VDY"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="knx-x6-vG5">
+                                        <rect key="frame" x="197.5" y="0.5" width="47" height="63"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="42"/>
+                                        <state key="normal" title="💖">
+                                            <color key="titleColor" red="1" green="0.91242306289999997" blue="0.30469108369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="ratingButtonTappedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cBB-bt-I4e"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qxv-z5-Ri3">
+                                        <rect key="frame" x="296" y="0.5" width="47" height="63"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="42"/>
+                                        <state key="normal" title="😂">
+                                            <color key="titleColor" red="1" green="0.91242306289999997" blue="0.30469108369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="ratingButtonTappedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Hna-w6-7ys"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" red="0.14498057980000001" green="0.2827290053" blue="0.43834786549999999" alpha="0.20427547090000001" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="64" id="HxG-2H-kfx"/>
-                                    <constraint firstAttribute="width" secondItem="qxv-z5-Ri3" secondAttribute="height" id="YHM-u0-acM"/>
+                                    <constraint firstAttribute="height" constant="64" id="eyL-v9-mJz"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
-                                <state key="normal" title="😂">
-                                    <color key="titleColor" red="1" green="0.91242306289999997" blue="0.30469108369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                </state>
-                                <connections>
-                                    <action selector="😂tapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="kEY-6S-0Km"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="knx-x6-vG5">
-                                <rect key="frame" x="155.5" y="523" width="64" height="64"/>
-                                <color key="backgroundColor" red="0.14498057980000001" green="0.2827290053" blue="0.43834786549999999" alpha="0.20427547090000001" colorSpace="custom" customColorSpace="displayP3"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="knx-x6-vG5" secondAttribute="height" id="95Z-P3-VBc"/>
-                                    <constraint firstAttribute="height" constant="64" id="jkl-R1-n2U"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
-                                <state key="normal" title="💖">
-                                    <color key="titleColor" red="1" green="0.91242306289999997" blue="0.30469108369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                </state>
-                                <connections>
-                                    <action selector="💖tapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="9l7-YI-Cib"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1do-C0-iU8">
-                                <rect key="frame" x="16" y="523" width="64" height="64"/>
-                                <color key="backgroundColor" red="0.14498057980000001" green="0.2827290053" blue="0.43834786549999999" alpha="0.20427547090000001" colorSpace="custom" customColorSpace="displayP3"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="1do-C0-iU8" secondAttribute="height" id="H9u-qA-ACv"/>
-                                    <constraint firstAttribute="height" constant="64" id="rbn-bO-5Qk"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
-                                <state key="normal" title="💩">
-                                    <color key="titleColor" red="1" green="0.91242306289999997" blue="0.30469108369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                </state>
-                                <connections>
-                                    <action selector="💩tapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Ty-Vf-HmH"/>
-                                </connections>
-                            </button>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.32656646938019079" green="0.62639034644181335" blue="0.99865164974619292" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="1do-C0-iU8" firstAttribute="centerY" secondItem="qxv-z5-Ri3" secondAttribute="centerY" id="1Rb-5e-HyL"/>
                             <constraint firstItem="UCq-hl-5IN" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="5NT-gQ-vJB"/>
-                            <constraint firstItem="1do-C0-iU8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="An8-b7-ZsA"/>
-                            <constraint firstItem="knx-x6-vG5" firstAttribute="width" secondItem="qxv-z5-Ri3" secondAttribute="width" id="BV6-KD-eGj"/>
                             <constraint firstItem="dod-08-D87" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-12" id="CZD-bK-Bvr"/>
-                            <constraint firstItem="knx-x6-vG5" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="GpS-qJ-bdg"/>
-                            <constraint firstItem="1do-C0-iU8" firstAttribute="width" secondItem="1do-C0-iU8" secondAttribute="height" id="ITh-dj-1ui"/>
+                            <constraint firstItem="dod-08-D87" firstAttribute="bottom" secondItem="pEB-p7-EIU" secondAttribute="top" id="GR8-9n-KfF"/>
                             <constraint firstItem="UCq-hl-5IN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Qy9-5j-ATH"/>
-                            <constraint firstItem="1do-C0-iU8" firstAttribute="height" secondItem="qxv-z5-Ri3" secondAttribute="height" id="SbX-s7-jBh"/>
                             <constraint firstItem="UCq-hl-5IN" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="UEq-T0-3VZ"/>
-                            <constraint firstItem="knx-x6-vG5" firstAttribute="height" secondItem="qxv-z5-Ri3" secondAttribute="height" id="URq-hp-Fhs"/>
-                            <constraint firstItem="knx-x6-vG5" firstAttribute="width" secondItem="knx-x6-vG5" secondAttribute="height" id="Ws8-n1-pgK"/>
                             <constraint firstItem="dod-08-D87" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Ypr-AT-BPt"/>
-                            <constraint firstItem="knx-x6-vG5" firstAttribute="centerY" secondItem="qxv-z5-Ri3" secondAttribute="centerY" id="aWM-RV-fwE"/>
+                            <constraint firstItem="UCq-hl-5IN" firstAttribute="top" secondItem="pEB-p7-EIU" secondAttribute="bottom" constant="8" symbolic="YES" id="azO-tJ-aGG"/>
                             <constraint firstItem="dod-08-D87" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="12" id="dDg-DX-erD"/>
-                            <constraint firstItem="qxv-z5-Ri3" firstAttribute="top" secondItem="dod-08-D87" secondAttribute="bottom" constant="16" id="lvz-2T-4WU"/>
-                            <constraint firstItem="UCq-hl-5IN" firstAttribute="top" secondItem="qxv-z5-Ri3" secondAttribute="bottom" constant="16" id="o2k-TW-Jz1"/>
-                            <constraint firstItem="1do-C0-iU8" firstAttribute="width" secondItem="qxv-z5-Ri3" secondAttribute="width" id="vDZ-pC-bJp"/>
-                            <constraint firstItem="qxv-z5-Ri3" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-16" id="wWI-kR-opK"/>
+                            <constraint firstItem="pEB-p7-EIU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="p8I-Qt-LVx"/>
+                            <constraint firstItem="pEB-p7-EIU" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-16" id="rB6-Uy-aee"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="quoteLabel" destination="dod-08-D87" id="326-0y-tHa"/>
-                        <outletCollection property="ratingButtons" destination="qxv-z5-Ri3" collectionClass="NSMutableArray" id="xWL-gm-eSl"/>
-                        <outletCollection property="ratingButtons" destination="knx-x6-vG5" collectionClass="NSMutableArray" id="DYC-ii-czy"/>
-                        <outletCollection property="ratingButtons" destination="1do-C0-iU8" collectionClass="NSMutableArray" id="YDP-HS-oAo"/>
+                        <outlet property="ratingsButtons" destination="pEB-p7-EIU" id="HnD-6n-ghb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
